--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
   "parserOptions": {
     "ecmaVersion": 2018
   },
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "ava"],
   "rules": {
     "prettier/prettier": "error",
     "no-console": ["error", { "allow": ["warn", "error", "info"] }]
