--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: 'Install pnpm'
           command: |
-            curl -L https://unpkg.com/@pnpm/self-installer | node
+            curl -L https://unpkg.com/@pnpm/self-installer | sudo node
       # Download and cache dependencies
       - restore_cache:
           keys:
