--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "balderdash",
   "version": "0.0.1",
   "description": "A custom Lodash package, based on a course by Brian Schermerhorn",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "ava",
     "test:watch": "pnpm test -- --watch",
@@ -39,7 +39,7 @@
       "test/*.test.js"
     ],
     "require": [
-      "./test/helpers/sucrase-register.js"
+      "sucrase/register"
     ]
   }
 }
