--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,16 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:ava/recommended",
-    "plugin:prettier/recommended"
-  ],
+  "ecmaFeatures": {
+    "modules": true
+  },
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "env": {
     "node": true
   },
   "parserOptions": {
-    "ecmaVersion": 2019
+    "ecmaVersion": 2019,
+    "sourceType": "module"
   },
-  "plugins": ["prettier", "ava"],
+  "plugins": ["prettier", "tape"],
   "rules": {
     "prettier/prettier": "error",
     "no-console": ["error", { "allow": ["warn", "error", "info"] }]
