--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A custom Lodash package, based on a course by Brian Schermerhorn",
   "main": "lib/index.js",
   "scripts": {
-    "test": "ava",
-    "test:watch": "pnpm test -- --watch",
+    "test": "TAP_RCFILE='./.taprc.yaml' tap __tests__/**/*.test.js",
+    "test:watch": "nodemon -q -I -w lib -x 'pnpm test'",
     "docs:build": "pnpx documentation build index.js -f html -o docs",
     "build": "rollup -c",
     "lint": "eslint ./",
@@ -16,18 +16,19 @@
   "author": "Thomas Dillard <HTMLGhozt>",
   "license": "MIT",
   "devDependencies": {
-    "ava": "^1.4.0",
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-ava": "^6.0.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-tape": "^1.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "rollup": "^1.7.3",
     "rollup-plugin-sucrase": "^2.1.0",
     "rxjs": "^6.4.0",
-    "sucrase": "^3.10.0"
+    "sucrase": "^3.10.0",
+    "tap": "^12.6.1"
   },
   "husky": {
     "hooks": {
