--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,11 @@
   "ecmaFeatures": {
     "modules": true
   },
-  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:tape/recommended",
+    "plugin:prettier/recommended"
+  ],
   "env": {
     "node": true
   },
