--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "rollup-plugin-sucrase": "^2.1.0",
     "rxjs": "^6.4.0",
     "sucrase": "^3.10.0",
-    "tap": "^12.6.1"
+    "tap": "^12.6.1",
+    "testdouble": "^3.11.0"
   },
   "husky": {
     "hooks": {
